test/e2e/config/authorization.yaml
---
apiVersion: v1
kind: List
items:
- apiVersion: networking.istio.io/v1alpha3
  kind: EnvoyFilter
  metadata:
    name: authorization-workload
    namespace: gateway-test
  spec:
    workloadSelector:
      labels:
        app: workload
    configPatches:
    - applyTo: CLUSTER
      patch:
        operation: ADD
        value:
          name: opa
          connect_timeout: 1s
          type: STATIC
          load_assignment:
            cluster_name: opa
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    pipe:
                      path: "/run/gateway/private/opa.sock"
          http2_protocol_options: {}
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_OUTBOUND
        listener:
          portNumber: 80
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: gateway.request
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            default_source_code:
              filename: "/run/gateway/private/http-guard.lua"
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_OUTBOUND
        listener:
          portNumber: 80
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.ext_authz
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            transport_api_version: V3
            failure_mode_allow: false
            include_tls_session: true
            with_request_body:
              max_request_bytes: 65536
              allow_partial_message: false
              pack_as_bytes: false
            grpc_service:
              envoy_grpc:
                cluster_name: opa
              timeout: 1s
            validate_mutations: true
            decoder_header_mutation_rules:
              disallow_all: true
              disallow_is_error: true
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_OUTBOUND
        listener:
          portNumber: 80
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: gateway.dispatch
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            default_source_code:
              filename: "/run/gateway/private/http-guard.lua"
    - applyTo: LISTENER
      match:
        context: SIDECAR_OUTBOUND
        listener:
          portNumber: 8080
      patch:
        operation: REMOVE
    - applyTo: LISTENER
      match:
        context: SIDECAR_OUTBOUND
        listener:
          portNumber: 8443
      patch:
        operation: REMOVE
- apiVersion: networking.istio.io/v1alpha3
  kind: EnvoyFilter
  metadata:
    name: authorization-egress
    namespace: gateway-test
  spec:
    workloadSelector:
      labels:
        app: egress
    configPatches:
    - applyTo: CLUSTER
      patch:
        operation: ADD
        value:
          name: opa
          connect_timeout: 1s
          type: STATIC
          load_assignment:
            cluster_name: opa
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    pipe:
                      path: "/run/gateway/private/opa.sock"
          http2_protocol_options: {}
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          portNumber: 8080
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: gateway.request
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            default_source_code:
              filename: "/run/gateway/private/http-guard.lua"
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          portNumber: 8080
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.ext_authz
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            transport_api_version: V3
            failure_mode_allow: false
            include_tls_session: true
            with_request_body:
              max_request_bytes: 65536
              allow_partial_message: false
              pack_as_bytes: false
            grpc_service:
              envoy_grpc:
                cluster_name: opa
              timeout: 1s
            validate_mutations: true
            decoder_header_mutation_rules:
              disallow_all: true
              disallow_is_error: true
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          portNumber: 8080
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: gateway.dispatch
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            default_source_code:
              filename: "/run/gateway/private/http-guard.lua"
