test/e2e/config/fault-opa.yaml
# Used only while exercising mutation responses from the authorization service.
plugins:
  envoy_ext_authz_grpc:
    path: envoy/authz/allow
    skip-request-body-parse: true
