test/e2e/config/istiod-values.yaml
cni:
  enabled: true
autoscaleEnabled: false
resources:
  requests:
    cpu: 100m
    memory: 256Mi
meshConfig:
  accessLogFile: /dev/stdout
  accessLogEncoding: JSON
  accessLogFormat: |
    {"request_id":"%REQ(X-REQUEST-ID)%","path":"%REQ(:PATH)%","code":"%RESPONSE_CODE%","downstream_peer":"%DOWNSTREAM_PEER_URI_SAN%","upstream_peer":"%UPSTREAM_PEER_URI_SAN%","downstream_tls":"%DOWNSTREAM_TLS_VERSION%","upstream_tls":"%UPSTREAM_TLS_VERSION%","details":"%RESPONSE_CODE_DETAILS%","transport_error":"%UPSTREAM_TRANSPORT_FAILURE_REASON%"}
