test/e2e/config/routes.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.istio.io/v1
  kind: Gateway
  metadata:
    name: egress
    namespace: gateway-test
  spec:
    selector:
      app: egress
    servers:
    - hosts:
      - origin.gateway-origin.svc.cluster.local
      - blocked-workload.gateway-origin.svc.cluster.local
      - child.blocked-workload.gateway-origin.svc.cluster.local
      - notblocked-workload.gateway-origin.svc.cluster.local
      - blocked-egress.gateway-origin.svc.cluster.local
      - child.blocked-egress.gateway-origin.svc.cluster.local
      - notblocked-egress.gateway-origin.svc.cluster.local
      port:
        name: https-mesh
        number: 8080
        protocol: HTTPS
      tls:
        mode: ISTIO_MUTUAL
    - hosts:
      - '*'
      port:
        name: https-inspection
        number: 8443
        protocol: HTTPS
      tls:
        mode: ISTIO_MUTUAL
- apiVersion: networking.istio.io/v1
  kind: DestinationRule
  metadata:
    name: egress
    namespace: gateway-test
  spec:
    host: egress.gateway-test.svc.cluster.local
    trafficPolicy:
      connectionPool:
        http:
          useClientProtocol: true
      portLevelSettings:
      - port:
          number: 8443
        connectionPool:
          http:
            useClientProtocol: true
        tls:
          mode: ISTIO_MUTUAL
          sni: inspection.mesh
          subjectAltNames:
          - spiffe://cluster.local/ns/gateway-test/sa/egress
      tls:
        mode: ISTIO_MUTUAL
        sni: origin.gateway-origin.svc.cluster.local
        subjectAltNames:
        - spiffe://cluster.local/ns/gateway-test/sa/egress
- apiVersion: networking.istio.io/v1
  kind: VirtualService
  metadata:
    name: origin-via-egress
    namespace: gateway-test
  spec:
    gateways:
    - mesh
    - egress
    hosts:
    - origin.gateway-origin.svc.cluster.local
    - blocked-workload.gateway-origin.svc.cluster.local
    - child.blocked-workload.gateway-origin.svc.cluster.local
    - notblocked-workload.gateway-origin.svc.cluster.local
    - blocked-egress.gateway-origin.svc.cluster.local
    - child.blocked-egress.gateway-origin.svc.cluster.local
    - notblocked-egress.gateway-origin.svc.cluster.local
    http:
    - match:
      - gateways:
        - mesh
        port: 80
      route:
      - destination:
          host: egress.gateway-test.svc.cluster.local
          port:
            number: 8080
    - match:
      - gateways:
        - egress
        port: 8080
      route:
      - destination:
          host: origin.gateway-origin.svc.cluster.local
          port:
            number: 80
- apiVersion: networking.istio.io/v1alpha3
  kind: EnvoyFilter
  metadata:
    name: trace-request-id
    namespace: gateway-test
  spec:
    configPatches:
    - applyTo: NETWORK_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
      patch:
        operation: MERGE
        value:
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            preserve_external_request_id: true
    workloadSelector:
      labels:
        app: egress
- apiVersion: networking.istio.io/v1
  kind: VirtualService
  metadata:
    name: inspection-egress
    namespace: gateway-test
  spec:
    gateways:
    - egress
    hosts:
    - '*'
    http:
    - match:
      - port: 8443
      retries:
        attempts: 0
      route:
      - destination:
          host: origin-https.gateway-origin.svc.cluster.local
          port:
            number: 443
- apiVersion: networking.istio.io/v1
  kind: Sidecar
  metadata:
    name: workload
    namespace: gateway-test
  spec:
    outboundTrafficPolicy:
      mode: REGISTRY_ONLY
    egress:
    - hosts:
      - gateway-test/*
      - gateway-origin/origin.gateway-origin.svc.cluster.local
      - gateway-origin/blocked-workload.gateway-origin.svc.cluster.local
      - gateway-origin/child.blocked-workload.gateway-origin.svc.cluster.local
      - gateway-origin/notblocked-workload.gateway-origin.svc.cluster.local
      - gateway-origin/blocked-egress.gateway-origin.svc.cluster.local
      - gateway-origin/child.blocked-egress.gateway-origin.svc.cluster.local
      - gateway-origin/notblocked-egress.gateway-origin.svc.cluster.local
    workloadSelector:
      labels:
        app: workload

- apiVersion: networking.istio.io/v1
  kind: ServiceEntry
  metadata:
    name: host-boundary-children
    namespace: gateway-origin
  spec:
    hosts:
    - child.blocked-workload.gateway-origin.svc.cluster.local
    - child.blocked-egress.gateway-origin.svc.cluster.local
    ports:
    - number: 80
      name: http-boundary
      protocol: HTTP
    resolution: DNS
    location: MESH_INTERNAL
